Fix body overflow bug with container class

--- a/css/collections.css
+++ b/css/collections.css
@@ -1,3 +1,33 @@
+body {
+  display: grid;
+  height: 100vh;
+
+  grid-template-areas:
+    "header header header"
+    "main main aside"
+    "footer footer footer";
+  gap: 2em;
+  /* margin: 0 auto; */
+  grid-template-columns: 2fr 2fr 1fr;
+  grid-template-rows: auto 1fr auto;
+}
+
+header {
+  grid-area: header;
+}
+
+main {
+  grid-area: main;
+}
+
+aside {
+  grid-area: aside;
+}
+
+footer {
+  grid-area: footer;
+}
+
 .recipes-collections__cards {
   display: grid;
   /* grid-template-rows: repeat(3, 1fr); */
@@ -9,7 +39,7 @@
 @media screen and (min-width: 40em) {
   .recipes-collections__cards {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 0.618fr);
     /* grid-auto-flow: column; */
     gap: 1em;
     place-items: center;
